# Quickset

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benches/: search_benchmarks.rs
examples/: api_usage.sh  preloaded_server.rs
src/: auth.rs  config.rs  http.rs  index.rs  lib.rs  log.rs  main.rs  query.rs  search.rs  storage.rs  table.rs
src/sync/: clickhouse.rs
tests/: integration_tests.rs  stress_tests.rs
